agregadas paginas faltantes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <a href="/">Home</a>
+    <%= link_to 'Dropdown', pages_test_url%>
     <%= yield %>
   </body>
 </html>
