--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,80 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+	<link rel="stylesheet" href="../assets/stylesheets/main.css" />
+	<noscript><link rel="stylesheet" href="../assets/stylesheets/noscript.css" /></noscript>
+	
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <a href="/">Home</a>
-    <%= link_to 'Dropdown', pages_test_url%>
-    <%= yield %>
-  </body>
+  	<body class="no-sidebar is-preload">
+
+    	<div id="page-wrapper">
+
+			<!-- Header -->
+				<div id="header">
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+
+								<li><a href="/">Home</a></li>
+								<li><%= link_to 'Test', pages_test_url%></li>
+								<li><%= link_to 'Login', users_login_url%></li>
+								<li><%= link_to 'About us', pages_about_us_url%></li>
+								
+							</ul>
+						</nav>
+
+				</div>
+
+			<!-- Main -->
+				<div class="wrapper style1">
+
+					<div class="container">
+						<article id="main" class="special">
+
+             				<%= yield %>
+
+						</article>
+						
+					</div>
+
+				</div>
+
+			<!-- Footer -->
+				<div id="footer">
+					<div class="container">
+
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Copyright -->
+									<div class="copyright">
+										<ul class="menu">
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										</ul>
+									</div>
+
+							</div>
+
+						</div>
+					</div>
+				</div>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="../assets/javascripts/jquery.min.js"></script>
+			<script src="../assets/javascripts/jquery.dropotron.min.js"></script>
+			<script src="../assets/javascripts/jquery.scrolly.min.js"></script>
+			<script src="../assets/javascripts/jquery.scrollex.min.js"></script>
+			<script src="../assets/javascripts/browser.min.js"></script>
+			<script src="../assets/javascripts/breakpoints.min.js"></script>
+			<script src="../assets/javascripts/util.js"></script>
+			<script src="../assets/javascripts/main.js"></script>
+			<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+	</body>
+
 </html>
